--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "history": "^5.0.0",
     "mdbreact": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
