--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-highlight-words": "^0.17.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
