--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "antd": "^4.12.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "formik": "^2.2.6",
     "history": "^5.0.0",
+    "jquery": "^3.5.1",
     "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
