--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "antd": "^4.12.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
     "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
     "reactstrap": "^8.9.0",
+    "simple-peer": "^9.10.0",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
